--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -38,3 +38,18 @@
     transform: rotate(360deg);
   }
 }
+
+.product_card_image{
+  height: 200px;
+}
+
+input[type="file"] {
+  color: white;
+  padding: 10px;
+  margin-bottom: 8px;
+  border: 1px solid #bcbcbc;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+}
