--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -44,7 +44,7 @@
 }
 
 input[type="file"] {
-  color: white;
+  color: black;
   padding: 10px;
   margin-bottom: 8px;
   border: 1px solid #bcbcbc;
